--- a/public/index.html
+++ b/public/index.html
@@ -415,6 +415,13 @@
             animation__mouseclick="startEvents:click; dur:300;">
             </a-entity>
 
+            <!--cricket puzzle-->
+            <a-entity class = "cricket" position="0 19 0" rotation="0 0 0" scale="1 1 1" geometry="primitive: box; width:1.0; height:1.0; depth:1.0;" material="color:rgb(50, 200, 50);"></a-entity>
+            <a-entity class = "cricket" position="0 19 0" rotation="0 0 0" scale="1 1 1" geometry="primitive: box; width:1.0; height:1.0; depth:1.0;" material="color:rgb(50, 200, 50);"></a-entity>
+            <a-entity class = "cricket" position="0 19 0" rotation="0 0 0" scale="1 1 1" geometry="primitive: box; width:1.0; height:1.0; depth:1.0;" material="color:rgb(50, 200, 50);"></a-entity>
+            <a-entity class = "cricket" position="0 19 0" rotation="0 0 0" scale="1 1 1" geometry="primitive: box; width:1.0; height:1.0; depth:1.0;" material="color:rgb(50, 200, 50);"></a-entity>
+
+
             <!--Teleporting?-->
 a
             <a-entity id="teleHall" class="button interactive" position="5 20 0"
