--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
                 ambientSounds.forEach(function (soundEntity) {
                     soundEntity.components.sound.playSound();
                 });
+                document.getElementById("scene_music").components.sound.playSound();
             }
         </script>
 
@@ -64,13 +65,13 @@
             </div>
         </div>
 
-        <a-scene id="scene" physics start-experience>
+        <a-scene id="scene" physics start-experience environment-effect>
             <a-assets>
                 <!--Starting to load in some SFX here-->
                 <audio id="city_amb" src="assets/sound/citySounds.mp3" preload="auto" crossorigin="anonymous"></audio>
                 <audio id="bird_amb" src="assets/sound/birdSounds.mp3" preload="auto" crossorigin="anonymous"></audio>
+                <audio id="serenity_music" src = "assets/sound/Serenity.wav" preload = "auto" crossorigin = "anonymous"></audio>
                 <audio id = "good1_sfx" src = "assets/sound/goodSound_1.ogg" preload = "auto" crossorigin = "anonymous"></audio>
-                <audio id="good2_sfx" src = "assets/sound/goodSound_2.ogg" preload = "auto" crossorigin = "anonymous"></audio>
                 <audio id="light1_sfx" src = "assets/sound/lightSwitch_1.ogg" preload = "auto" crossorigin = "anonymous"></audio>
 
                 <a-asset-item id="apartment_model" response-type="arraybuffer" src="assets/models/apartment.gltf"></a-asset-item>
@@ -274,16 +275,13 @@
 
             </a-assets>
 
-            <!--Sound coming from the windows test-->
-            <a-entity class = "ambient-music" position="-4 2 -9" sound="src:#city_amb; autoplay:false"></a-entity>
-            <a-entity class = "ambient-music" position="10 2 -9" sound="src:#city_amb; autoplay:false"></a-entity>
-
             <!-- camera -->        
-
             <a-entity id="camera" camera look-controls position = "5 20 0"> <!--spawning us high in an apartment-->
                 <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
                 <a-entity cursor="rayOrigin:mouse;" raycaster="far:20; interval:200; objects:.interactive;"></a-entity>
                 <a-entity class = "sound-fx"></a-entity> <!--Blank sound FX holder to follow the player around when they succeed or fail at things-->
+                <a-entity id = "scene_music" sound="src:#serenity_music; autoplay:false; loop:true; volume:0.4;"></a-entity>
+                <a-entity class = "ambient-music" sound="src:#city_amb; autoplay:false; loop:true; volume:0.1;"></a-entity>
             </a-entity>
 
 
