--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <script src="js/time-effect.js"></script>
         <script src="js/aframe-physics-system.js"></script>
         <script src="js/tele.js"></script>
+        <script src ="js/environment-effects.js"></script>  
         <!--Copy and pasted from the source Anthony gave us.-->
         <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script>
         <script
@@ -39,7 +40,6 @@
             function startExperience() {
                 //hide user-gesture overlay
                 document.querySelector('#user-gesture-overlay').style.display = 'none';
-                document.querySelector('#UI').style.display = 'block';
                 //start all ambient music
                 const ambientSounds = document.querySelectorAll('.ambient-music');
                 ambientSounds.forEach(function (soundEntity) {
@@ -51,9 +51,6 @@
 
     </head>
     <body>
-        <div id="UI">
-            Puzzles: 0/5
-        </div>
         <!-- by having a 2D "user gesture" we can allow sounds to play and the like. We will make it an overlay so nothing can be clicked before the user gesture ... -->
         <!-- https://developers.google.com/web/updates/2017/09/autoplay-policy-changes (fun memes on webpage;) -->
         <div id="user-gesture-overlay">
@@ -65,7 +62,7 @@
             </div>
         </div>
 
-        <a-scene id="scene" physics start-experience environment-effect>
+        <a-scene id="scene" physics start-experience environment-effect>    
             <a-assets>
                 <!--Starting to load in some SFX here-->
                 <audio id="city_amb" src="assets/sound/citySounds.mp3" preload="auto" crossorigin="anonymous"></audio>
@@ -280,8 +277,17 @@
                 <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
                 <a-entity cursor="rayOrigin:mouse;" raycaster="far:20; interval:200; objects:.interactive;"></a-entity>
                 <a-entity class = "sound-fx"></a-entity> <!--Blank sound FX holder to follow the player around when they succeed or fail at things-->
-                <a-entity id = "scene_music" sound="src:#serenity_music; autoplay:false; loop:true; volume:0.4;"></a-entity>
+                <a-entity id = "scene_music" sound="src:#serenity_music; autoplay:false; loop:true; volume:0.3;"></a-entity>
                 <a-entity class = "ambient-music" sound="src:#city_amb; autoplay:false; loop:true; volume:0.1;"></a-entity>
+                <!--UI text that follows the camera-->
+                <!--Ugly as sin. Idk how to fix it, if anyone has thoughts lemme know -->
+               <!--<a-text id="UI" 
+                position="1 0.55 -1" 
+                value ="0/5"
+                width = "2"
+                ></a-text>
+            
+                TEXT ABOVE IS GROSS AND DOESNT WORK WELL, NEED UI HELP--> 
             </a-entity>
 
 
