--- a/public/index.html
+++ b/public/index.html
@@ -292,7 +292,7 @@
 
             <!-- camera -->        
 
-            <a-entity id="camera" wasd-controls camera look-controls position = "5 20 0"> <!--spawning us high in an apartment-->
+            <a-entity id="camera" camera look-controls position = "5 20 0"> <!--spawning us high in an apartment-->
                 <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
                 <a-entity cursor="rayOrigin:mouse;" raycaster="far:20; interval:200; objects:.interactive;"></a-entity>
                 
