--- a/public/index.html
+++ b/public/index.html
@@ -297,7 +297,7 @@
 
             <a-entity id="camera" camera look-controls position = "5 20 0"> <!--spawning us high in an apartment-->
                 <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
-                <a-entity cursor="rayOrigin:mouse;" raycaster="far:20; interval:200; objects:.interactive;"></a-entity>
+                <a-entity cursor="rayOrigin:mouse;" raycaster="far:40; interval:200; objects:.interactive;"></a-entity>
                 
             </a-entity>
 
@@ -456,10 +456,12 @@
             <a-entity class = "cricket" id = "cricket3" position="0 19 0" rotation="0 0 0" scale="1 1 1" geometry="primitive: box; width:1.0; height:1.0; depth:1.0;" material="color:rgb(50, 200, 50);" bug></a-entity>
             <a-entity class = "cricket" id = "cricket4" position="0 19 0" rotation="0 0 0" scale="1 1 1" geometry="primitive: box; width:1.0; height:1.0; depth:1.0;" material="color:rgb(50, 200, 50);" bug></a-entity>
 
+            <!--Lights-->
+            <a-entity light="type: directional; color: #FFF; intensity: 1.0" position="15 24 -10"></a-entity>
 
             <!--Teleporting?-->
-a
-            <a-entity id="teleHall" class="button interactive" position="5 14 0"
+
+            <a-entity id="teleHall" class="button interactive" position="5 13 0"
             geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
@@ -468,7 +470,7 @@ a
             tele-button>
             </a-entity>
 
-            <a-entity id="teleKitchen" class="button interactive" position="15 14 14"
+            <a-entity id="teleKitchen" class="button interactive" position="15 13 14"
             geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
@@ -477,7 +479,7 @@ a
             tele-button>
             </a-entity>
 
-            <a-entity id="teleBalcony" class="button interactive" position="7 14 28"
+            <a-entity id="teleBalcony" class="button interactive" position="7 13 28"
             geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
@@ -487,7 +489,34 @@ a
             door-swing>
             </a-entity>
 
-            <a-entity id="teleTV" class="button interactive" position="15 14 -10"
+            <a-entity id="teleTV" class="button interactive" position="15 13 -10"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            sound="src:#light1_sfx; on:click;"
+            animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
+            animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
+            animation__mouseclick="startEvents:click; dur:300;"
+            tele-button>
+            </a-entity>
+
+            <a-entity id="teleBath" class="button interactive" position="-4 13 -11"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            sound="src:#light1_sfx; on:click;"
+            animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
+            animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
+            animation__mouseclick="startEvents:click; dur:300;"
+            tele-button>
+            </a-entity>
+
+            <a-entity id="teleBathFar" class="button interactive" position="-18 13 -13"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            sound="src:#light1_sfx; on:click;"
+            animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
+            animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
+            animation__mouseclick="startEvents:click; dur:300;"
+            tele-button>
+            </a-entity>
+
+            <a-entity id="teleBed" class="button interactive" position="-5 13 7.5"
             geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
