star walls created

--- a/public/index.html
+++ b/public/index.html
@@ -726,7 +726,57 @@
 
             <!---->
 
-            <a-entity class = "back-environment" id = "bg" environment="preset:forest;"></a-entity>
+            <!--Star-less Walls
+            These walls are removed when the puzzle is complete-->
+            <a-entity class = "star-walls"
+                position = "-50, 20, 50"
+                geometry = "primitive: box"
+                scale = "200, 200, 0"
+                rotation = "0, 90, 0"
+                material = "color: black;"
+            ></a-entity>
+
+            <a-entity class = "star-walls"
+                position = "50, 20, 50"
+                geometry = "primitive: box"
+                scale = "200, 200, 0"
+                rotation = "0, 90, 0"
+                material = "color: black;"
+            ></a-entity>
+
+            <a-entity class = "star-walls"
+                position = "50, 20, 50"
+                geometry = "primitive: box"
+                scale = "0, 200, 200"
+                rotation = "0, 90, 0"
+                material = "color: black;"
+            ></a-entity>
+
+            <a-entity class = "star-walls"
+                position = "50, 20, -50"
+                geometry = "primitive: box"
+                scale = "0, 200, 200"
+                rotation = "0, 90, 0"
+                material = "color: black;"
+            ></a-entity>
+
+            <a-entity class = "ground"
+                position = "0, 100, 0"
+                geometry = "primitive: plane"
+                scale = "300, 300, 0"
+                rotation = "90, 0, 0"
+                material = "color: black;"
+            ></a-entity>
+
+            <a-entity class = "ground"
+                position = "0, 1.1, 0"
+                geometry = "primitive: plane"
+                scale = "300, 300, 0"
+                rotation = "270, 0, 0"
+                material = "color: rgb(0, 51, 20);"
+            ></a-entity>
+
+            <a-entity class = "back-environment" id = "bg" environment="preset:default;"></a-entity>
         
         
         </a-scene>
