--- a/public/index.html
+++ b/public/index.html
@@ -508,7 +508,7 @@
                 <!--Environmental effect testing button-->
                 <a-entity id="environment_button" position = "5 10.2 10">
                     <a-entity class = "button interactive" 
-                                bridge-effect
+                                stars-effect
                                 position = "0 0.6 0" 
                                 geometry = "primitive:cylinder; radius: 0.15; height: 0.2;" 
                                 material = "color:rgb(255, 100, 100)"
@@ -734,6 +734,7 @@
                 scale = "200, 200, 0"
                 rotation = "0, 90, 0"
                 material = "color: black;"
+                visible="false"
             ></a-entity>
 
             <a-entity class = "star-walls"
@@ -742,6 +743,7 @@
                 scale = "200, 200, 0"
                 rotation = "0, 90, 0"
                 material = "color: black;"
+                visible="false"
             ></a-entity>
 
             <a-entity class = "star-walls"
@@ -750,6 +752,7 @@
                 scale = "0, 200, 200"
                 rotation = "0, 90, 0"
                 material = "color: black;"
+                visible="false"
             ></a-entity>
 
             <a-entity class = "star-walls"
@@ -758,14 +761,16 @@
                 scale = "0, 200, 200"
                 rotation = "0, 90, 0"
                 material = "color: black;"
+                visible="false"
             ></a-entity>
 
-            <a-entity class = "ground"
+            <a-entity class = "star-walls"
                 position = "0, 100, 0"
                 geometry = "primitive: plane"
                 scale = "300, 300, 0"
                 rotation = "90, 0, 0"
                 material = "color: black;"
+                visible="false"
             ></a-entity>
 
             <a-entity class = "ground"
