--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                 <!--<a-entity light="type:spot; intensity:1.3; castShadow:true; shadowBias:-0.0005; angle:40; penumbra:0.3;" position = "0 1 0"></a-entity>-->
                 <a-entity cursor="rayOrigin:mouse;" raycaster="far:40; interval:200; objects:.interactive;"></a-entity>
             
-                <a-entity id = "sound-fx"></a-entity> <!--Blank sound FX holder to follow the player around when they succeed or fail at things-->
+                <a-entity id = "good-sound-fx" sound = "src:#good2_sfx; autoplay:false;"></a-entity> <!--Blank sound FX holder to follow the player around when they succeed or fail at things-->
                 <a-entity id = "scene_music" class = "ambient-music" sound="src:#serenity_music; autoplay:false; loop:true; volume:0.1;"></a-entity>
                 <a-entity id = "city_sounds" class = "ambient-music" sound="src:#city_amb; autoplay:false; loop:true; volume:0.1;"></a-entity>
                 <a-entity id = "bird_sounds" class = "ambient-music" sound="src:#birds_amb; autoplay:false; loop:true; volume:0.1;"></a-entity>
