--- a/public/index.html
+++ b/public/index.html
@@ -425,7 +425,7 @@
             <!--Teleporting-->
 
             <a-entity id="teleHall" class="button interactive" position="5 12 0"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -434,7 +434,7 @@
             </a-entity>
 
             <a-entity id="teleKitchen" class="button interactive" position="15 12 14"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -443,7 +443,7 @@
             </a-entity>
 
             <a-entity id="teleBalcony" class="button interactive" position="7 12 28"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -453,7 +453,7 @@
             </a-entity>
 
             <a-entity id="teleTV" class="button interactive" position="15 12 -10"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -462,7 +462,7 @@
             </a-entity>
 
             <a-entity id="teleBath" class="button interactive" position="-4 12 -11"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -471,7 +471,7 @@
             </a-entity>
 
             <a-entity id="teleBathFar" class="button interactive" position="-18 12 -13"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -480,7 +480,7 @@
             </a-entity>
 
             <a-entity id="teleBed" class="button interactive" position="-5 12 7.5"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -489,7 +489,7 @@
             </a-entity>
 
             <a-entity id="teleBed2" class="button interactive" position="-18 12 5"
-            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow;"
+            geometry="primitive:cylinder; radius:3; height:1;" rotation="0, 0, 0" material="color:yellow; transparent: true; opacity: 0.3;"
             sound="src:#light1_sfx; on:click;"
             animation__mouseenter="property:material.color; type:color; to:rgb(247, 244, 69); startEvents:mouseenter; dur:200;"
             animation__mouseleave="property:material.color; type:color; to:rgb(120, 98, 38); startEvents:mouseleave; dur:200;"
@@ -600,8 +600,6 @@
 
             <!--Where instantiated trees appear-->
             <a-entity id = "trees"></a-entity>
-            
-
 
 
             <!---->
